--- a/CedarMapsSampleApp/src/main/res/values-fa/strings.xml
+++ b/CedarMapsSampleApp/src/main/res/values-fa/strings.xml
@@ -23,4 +23,5 @@
     <string name="province">استان</string>
     <string name="comma">،</string>
     <string name="location_is_needed_to_function">نرم‌افزار برای عملکرد این ویژگی به موقعیت مکانی نیاز دارد</string>
+    <string name="no_address_available">آدرسی برای نمایش وجود ندارد</string>
 </resources>
