--- a/CedarMapsSampleApp/src/main/res/values/strings.xml
+++ b/CedarMapsSampleApp/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="longitude_example" translatable="false">51.3572</string>
     <string name="zoom_example" translatable="false">13</string>
     <string name="location_is_needed_to_function">App needs location to function</string>
+    <string name="no_address_available">No Address Available</string>
 </resources>
